--- a/public/css/Home_Usuario.css
+++ b/public/css/Home_Usuario.css
@@ -6,6 +6,12 @@ body {
 }
 html, body {
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px; /* Ajusta según la altura de tu navbar */
 }
 header {
     display: flex;
