--- a/public/css/Mi_Emprendimiento.css
+++ b/public/css/Mi_Emprendimiento.css
@@ -10,6 +10,12 @@ body {
 
 html, body {
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px; /* Ajusta según la altura de tu navbar */
 }
 
 /* Contenido principal */
