--- a/public/css/reseña3.css
+++ b/public/css/reseña3.css
@@ -11,7 +11,16 @@
 }
 
 
+html, body {
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px; /* Ajusta según la altura de tu navbar */
 
+}
 
 
 
