--- a/public/css/sobreEmpredelink.css
+++ b/public/css/sobreEmpredelink.css
@@ -3,7 +3,16 @@ body {
     margin: 0;
     padding: 0;
 }
+html, body {
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px; /* Ajusta según la altura de tu navbar */
 
+}
 
 .container {
     z-index: 1;
