--- a/public/css/Editar_Emprendimiento.css
+++ b/public/css/Editar_Emprendimiento.css
@@ -33,6 +33,17 @@ html, body {
     overflow: hidden;
 }
 
+html, body {
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px; /* Ajusta según la altura de tu navbar */
+
+}
+
 .hero-background {
     position: absolute;
     top: 0;
