--- a/public/css/Publicar_Emprendimiento2.css
+++ b/public/css/Publicar_Emprendimiento2.css
@@ -15,6 +15,11 @@ body {
 }
 html, body {
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     padding-top: 70px; /* Ajusta según la altura de tu navbar */
 
 }
