--- a/public/css/contactanosInver.css
+++ b/public/css/contactanosInver.css
@@ -2,9 +2,20 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    
     padding-top: 70px; /* Ajusta según la altura de tu navbar */
 
-    
+}
+
+html, body {
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px; /* Ajusta según la altura de tu navbar */
+
 }
 
 
