--- a/public/css/notificaciones3.css
+++ b/public/css/notificaciones3.css
@@ -12,6 +12,17 @@ body {
 
 }
 
+html, body {
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px; /* Ajusta según la altura de tu navbar */
+
+}
+
 
 main {
     flex: 1;
