--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -2,6 +2,9 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    height: 100%;
+    padding-top: 80px;
+
 }
 
 
@@ -15,6 +18,8 @@ body {
     height: 150px;
     object-fit: cover;
 }
+
+
 
 
 
