--- a/public/css/perfilEditar.css
+++ b/public/css/perfilEditar.css
@@ -4,6 +4,17 @@ body {
     padding: 0;
 }
 
+html, body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 70px; /* Ajusta según la altura de tu navbar */
+
+}
+
 
 .profile-container {
   max-width: 1000px;
