--- a/public/css/perfilInversionista.css
+++ b/public/css/perfilInversionista.css
@@ -4,6 +4,17 @@ body {
   padding: 0;
 }
 
+html, body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 70px; /* Ajusta según la altura de tu navbar */
+
+}
+
 /* Estilos responsive para el header */
 @media screen and (max-width: 768px) {
   header {
