--- a/public/css/politicayprivacidadInversor.css
+++ b/public/css/politicayprivacidadInversor.css
@@ -5,6 +5,17 @@ body {
 }
 
 
+html, body {
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px; /* Ajusta según la altura de tu navbar */
+
+}
+
 
 .menu-toggle img {
   font-size: 24px;
