--- a/public/css/resena.css
+++ b/public/css/resena.css
@@ -6,9 +6,14 @@ body {
 }
 html, body {
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     padding-top: 70px; /* Ajusta según la altura de tu navbar */
-}
 
+}
 
 
 
