--- a/public/css/reseñaInver.css
+++ b/public/css/reseñaInver.css
@@ -7,10 +7,14 @@ body {
 }
 html, body {
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     padding-top: 70px; /* Ajusta según la altura de tu navbar */
 
 }
-
 
 .new-review-container {
     background: #f4f1f15f;
