--- a/public/css/usurioPerfil.css
+++ b/public/css/usurioPerfil.css
@@ -3,7 +3,16 @@ body {
   margin: 0;
   padding: 0;
 }
+/* html, body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 70px; 
 
+} */
 header {
   display: flex;
   justify-content: space-between;
