--- a/public/css/reseña4.css
+++ b/public/css/reseña4.css
@@ -268,3 +268,32 @@ html, body {
         align-items: center;
     }
 }
+
+.exit-button-container {
+    display: flex;
+    justify-content: right;
+    margin-top: 20px;
+}
+
+.exit-button {
+    background-color: #000000;
+    color: white;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.exit-button:hover {
+    background-color: #2e2b2b;
+}
+
+/* Aseguramos que el botón sea responsive */
+@media (max-width: 768px) {
+    .exit-button {
+        padding: 8px 25px;
+        font-size: 14px;
+    }
+}
