--- a/public/css/acuerdosyterminos.css
+++ b/public/css/acuerdosyterminos.css
@@ -11,7 +11,23 @@ html, body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding-top: 50px; /* Ajusta según la altura de tu navbar */
+    padding-top: 70px; /* Ajusta según la altura de tu navbar */
+}
+.header-left {
+    display: flex;
+    align-items: center;
+}
+.header-right a {
+    margin-left: 20px;
+    text-decoration: none;
+    color: #000;
+    display: flex;
+    align-items: center;
+}
+
+.header-right a img {
+    margin-right: 5px;
+    width: 12px;
 }
 
 
@@ -24,7 +40,6 @@ html, body {
     margin: 10px auto;
     max-width: 1200px;
     position: relative;
-    background-image: url('/images/fondo.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
