--- a/public/css/acuerdosyterminos.css
+++ b/public/css/acuerdosyterminos.css
@@ -2,16 +2,19 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-}
-
-html, body {
     overflow-x: hidden;
-    margin: 0;
-    padding: 0;
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding-top: 70px; /* Ajusta según la altura de tu navbar */
+    padding-top: 5px;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #f8f8f8;
 }
 .header-left {
     display: flex;
@@ -31,7 +34,6 @@ html, body {
 }
 
 
-
 .container {
     z-index: 1;
     display: flex;
@@ -40,10 +42,12 @@ html, body {
     margin: 10px auto;
     max-width: 1200px;
     position: relative;
+    background-image: url('/images/fondo.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     padding: 20px;
+    margin-top: 6%;
 }
 
 .cont {
