--- a/public/css/politicayprivacidad.css
+++ b/public/css/politicayprivacidad.css
@@ -2,18 +2,35 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-}
-
-
-html, body {
     overflow-x: hidden;
-    margin: 0;
-    padding: 0;
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding-top: 70px; /* Ajusta según la altura de tu navbar */
+    padding-top: 5px;
+}
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #f8f8f8;
+}
+.header-left {
+    display: flex;
+    align-items: center;
+}
+.header-right a {
+    margin-left: 20px;
+    text-decoration: none;
+    color: #000;
+    display: flex;
+    align-items: center;
+}
+
+.header-right a img {
+    margin-right: 5px;
+    width: 12px;
 }
 
 .container {
