--- a/public/css/sobreEmpredelinkHome.css
+++ b/public/css/sobreEmpredelinkHome.css
@@ -1,18 +1,12 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-html, body {
-  overflow-x: hidden;
+  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding-top: 70px; /* Ajusta según la altura de tu navbar */
-
+  padding-top: 5px;
 }
 
 header {
@@ -22,10 +16,21 @@ header {
   padding: 10px 20px;
   background-color: #f8f8f8;
 }
-
 .header-left {
   display: flex;
   align-items: center;
+}
+.header-right a {
+  margin-left: 20px;
+  text-decoration: none;
+  color: #000;
+  display: flex;
+  align-items: center;
+}
+
+.header-right a img {
+  margin-right: 5px;
+  width: 12px;
 }
 
 .menu-toggle {
