--- a/public/css/Publicar_Emprendimiento1.css
+++ b/public/css/Publicar_Emprendimiento1.css
@@ -262,7 +262,17 @@ ul {
 
 
 
-
+  .preview-img {
+    max-width: 100px;
+    max-height: 100px;
+    margin: 5px;
+    object-fit: cover;
+}
+.image-preview img {
+    max-width: 200px;
+    max-height: 200px;
+    margin-top: 10px;
+}
 
 
 /* Logo responsiveness */
